push from win10

--- a/code/9.Regression/9.10.save.ipynb
+++ b/code/9.Regression/9.10.save.ipynb
@@ -56,87 +56,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Model...\n",
+      "y_hat = \n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 2 2 2 1 2 1 2 1 2 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1\n",
+      " 2 2 2 2 1 1 1 1 1 1 1 2 2 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 2 1 2 2 1 2 2 2 2\n",
+      " 2 2 1 1 2 2 2 2 1 2 1 2 1 2 2 1 1 2 2 2 2 2 1 1 2 2 2 1 2 2 2 1 2 2 2 1 2\n",
+      " 2 1]\n",
+      "accuracy = 80.667%\n"
+     ]
+    }
+   ],
    "source": [
     "if os.path.exists('iris.model'):\n",
     "    print('Loading Model...')\n",
     "    lr = joblib.load('iris.model')\n",
     "else:\n",
     "    print('Training Model...')\n",
-    "    lr = Pipeline()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "if os.path.exists('iris.model'):\n",
-    "    print('Load Model...')\n",
-    "    lr = joblib.load('iris.model')\n",
-    "else:\n",
-    "    print('Train Model...')\n",
-    "    lr = Pipeline([('sc', StandardScaler()),\n",
-    "                   ('poly', PolynomialFeatures(degree=3)),\n",
-    "                   ('clf', LogisticRegression()) ])\n",
-    "    lr.fit(x, y.ravel())\n",
+    "    lr = Pipeline([('sc',StandardScaler()),#标准化\n",
+    "                  ('poly',PolynomialFeatures(degree=3)),#生成多项式特征\n",
+    "                   ('clf',LogisticRegression())])\n",
+    "    lr.fit(x,y.ravel())\n",
     "y_hat = lr.predict(x)\n",
     "joblib.dump(lr, 'iris.model')\n",
     "print('y_hat = \\n', y_hat)\n",
     "print('accuracy = %.3f%%' % (100*accuracy_score(y, y_hat)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
